--- a/_mockUp/src/styl/ITCSS/components/_components.parallax.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.parallax.styl
@@ -34,3 +34,5 @@
     background: url("images/parallax/backgroundImage6.jpg") center fixed no-repeat
 .parallax__img--height
     background: url("images/parallax/backgroundImage7.jpg") center fixed no-repeat
+.parallax__img--nine
+    background: url("images/parallax/backgroundImage8.jpg") center fixed no-repeat
