--- a/_mockUp/src/jade/includes/header.jade
+++ b/_mockUp/src/jade/includes/header.jade
@@ -6,7 +6,7 @@ header(itemscope itemtype="http://schema.org/WPHeader").header
         div.nav
             h2(itemprop="alternativeHeadline").hiddenTitle Menu de navigation du site
             span(itemprop="keywords").inline-block.nav__element
-                a(itemprop="url" href="evenements.html").element__link Événements
+                a(itemprop="url" href="evenements.html").element__link Événement
             span(itemprop="keywords").inline-block.nav__element
                 a(itemprop="url" href="blog.html").element__link Actualités
             span.inline-block.banners
