--- a/_mockUp/src/jade/evenements.jade
+++ b/_mockUp/src/jade/evenements.jade
@@ -30,44 +30,44 @@ block content
                     label(for="participant").hightlight.label__text 
                         | Nombre de participants
                         span.asterisque  *
-                    input(id="participant" type="text" placeholder="Nombre de participants").input__text
+                    input(id="participant" type="text" placeholder="1").input__text
                 div.inline-block.form__element
                     label(for="nom").hightlight.label__text
                         | Nom
                         span.asterisque  *
-                    input(id="nom" type="text" placeholder="Nom").input__text
+                    input(id="nom" type="text" placeholder="Doe").input__text
                 div.inline-block.form__element
                     label(for="prenom").hightlight.label__text
                         | Prénom
                         span.asterisque  *
-                    input(id="prenom" type="text" placeholder="Prénom").input__text
+                    input(id="prenom" type="text" placeholder="John").input__text
                 div.inline-block.form__element
                     label(for="address").hightlight.label__text Adresse
-                    input(id="address" type="text" placeholder="Adresse").input__text
+                    input(id="address" type="text" placeholder="Rue de la Province, n° 10").input__text
                 div.inline-block.form__element
                     label(for="ville").hightlight.label__text Ville
-                    input(id="ville" type="text" placeholder="Ville").input__text
+                    input(id="ville" type="text" placeholder="Liège").input__text
                 div.inline-block.form__element
                     label(for="postal").hightlight.label__text  Code postal
-                    input(id="postal" type="text" placeholder="Code postal").input__text
+                    input(id="postal" type="text" placeholder="4400").input__text
                 div.inline-block.form__element
                     label(for="tel").hightlight.label__text
                         | Tel ou GSM
                         span.asterisque  *
-                    input(id="tel" type="text" placeholder="Tel ou GSM").input__text
+                    input(id="tel" type="text" placeholder="0498 32 72 89").input__text
                 div.inline-block.form__element
                     label(for="fax").hightlight.label__text Fax
-                    input(id="fax" type="text" placeholder="Fax").input__text
+                    input(id="fax" type="text" placeholder="063 14 85 62").input__text
                 div.inline-block.form__element
                     label(for="mail").hightlight.label__text
                         | Mail
                         span.asterisque  *
-                    input(id="mail" type="text" placeholder="Mail").input__text
+                    input(id="mail" type="text" placeholder="johndoe@gmail.com").input__text
                 div.inline-block.form__element
                     label(for="confirmMail").hightlight.label__text
                         | Confirmer mail
                         span.asterisque  *
-                    input(id="confirmMail" type="text" placeholder="Confirmer mail").input__text
+                    input(id="confirmMail" type="text" placeholder="johndoe@gmail.com").input__text
                 div.block.form__element--fullSize
                     label(for="msg").hightlight.label__text Votre message
                     textarea(id="msg" rows="10" placeholder="Nom des participants et/ou informations complémentaire").input__text
@@ -91,44 +91,44 @@ block content
                         label(for="participant").hightlight.label__text 
                             | Nombre de participants
                             span.asterisque  *
-                        input(id="participant" type="text" placeholder="Nombre de participants").input__text
+                        input(id="participant" type="text" placeholder="1").input__text
                     div.inline-block.form__element
                         label(for="nom").hightlight.label__text
                             | Nom
                             span.asterisque  *
-                        input(id="nom" type="text" placeholder="Nom").input__text
+                        input(id="nom" type="text" placeholder="Doe").input__text
                     div.inline-block.form__element
                         label(for="prenom").hightlight.label__text
                             | Prénom
                             span.asterisque  *
-                        input(id="prenom" type="text" placeholder="Prénom").input__text
+                        input(id="prenom" type="text" placeholder="John").input__text
                     div.inline-block.form__element
                         label(for="address").hightlight.label__text Adresse
-                        input(id="address" type="text" placeholder="Adresse").input__text
+                        input(id="address" type="text" placeholder="Rue de la Province, n° 10").input__text
                     div.inline-block.form__element
                         label(for="ville").hightlight.label__text Ville
-                        input(id="ville" type="text" placeholder="Ville").input__text
+                        input(id="ville" type="text" placeholder="Liège").input__text
                     div.inline-block.form__element
                         label(for="postal").hightlight.label__text  Code postal
-                        input(id="postal" type="text" placeholder="Code postal").input__text
+                        input(id="postal" type="text" placeholder="4400").input__text
                     div.inline-block.form__element
                         label(for="tel").hightlight.label__text
                             | Tel ou GSM
                             span.asterisque  *
-                        input(id="tel" type="text" placeholder="Tel ou GSM").input__text
+                        input(id="tel" type="text" placeholder="0498 32 72 89").input__text
                     div.inline-block.form__element
                         label(for="fax").hightlight.label__text Fax
-                        input(id="fax" type="text" placeholder="Fax").input__text
+                        input(id="fax" type="text" placeholder="063 14 85 62").input__text
                     div.inline-block.form__element
                         label(for="mail").hightlight.label__text
                             | Mail
                             span.asterisque  *
-                        input(id="mail" type="text" placeholder="Mail").input__text
+                        input(id="mail" type="text" placeholder="johndoe@gmail.com").input__text
                     div.inline-block.form__element
                         label(for="confirmMail").hightlight.label__text
                             | Confirmer mail
                             span.asterisque  *
-                        input(id="confirmMail" type="text" placeholder="Confirmer mail").input__text
+                        input(id="confirmMail" type="text" placeholder="johndoe@gmail.com").input__text
                     div.block.form__element--fullSize
                         label(for="msg").hightlight.label__text Votre message
                         textarea(id="msg" rows="10" placeholder="Nom des participants et/ou informations complémentaire").input__text
