Evenements.jade : done

--- a/_mockUp/src/jade/evenements.jade
+++ b/_mockUp/src/jade/evenements.jade
@@ -16,6 +16,11 @@ block content
                 span(itemprop="location") Seraing
             p(itemprop="description") Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas eaque quia reiciendis voluptate atque minus maiores a in, nihil magnam. Iure molestias quos reiciendis ducimus magni magnam eos at quibusdam!
             p(itemprop="description")  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit illo atque incidunt pariatur saepe reprehenderit recusandae omnis repellendus temporibus optio porro totam nesciunt, iusto placeat labore magni molestiae delectus quam.
+            p(itemprop="description") 
+                | Retrouver nous à 
+                span(itemprop="doorTime").hightlight 18h30
+                | , à 
+                span(itemprop="location").hightlight l'Église St Etienne
             
     div.parallax__img.parallax__img--six            
     div.parallax__body  
