--- a/_mockUp/src/jade/main.jade
+++ b/_mockUp/src/jade/main.jade
@@ -10,7 +10,7 @@ block content
         blockquote(itemprop="description").quote 
             | Ne manquez pas notre prochain 
             a(itemprop="url" href="evenements.html").quote__link Rendez-vous 
-            | dans la région de Namur
+            | dans la région de Liège, à Seraing
     div(itemscope itemtype="http://schema.org/Thing").parallax__body.addText
         h3(itemprop="headline").gamma Bienvenue au Resto-Rallye
         p(itemprop="description") Le Resto Rallye est un itinéraire gourmand en trois restaurants, pourquoi toujours se limiter à un seul restaurant pour déguster l’entièreté d’un menu ?
