Change few style

--- a/_mockUp/src/jade/includes/footer.jade
+++ b/_mockUp/src/jade/includes/footer.jade
@@ -14,7 +14,7 @@ div.parallax__body.myFooter
                 a(itemprop="url" href="contact.html") Contact
         
         section(itemscope itemtype="http://schema.org/TouristInformationCenter").inline-block.footer__information
-            h5(itemprop="headline").delta Notre adresse 
+            h5(itemprop="headline").delta Nous contacter 
             p(itemprop="contactPoint")
                 span.block.hightlight Mail&nbsp;: 
                 a(itemprop="url" href="mailto adress@gmail.com") adress@gmail.com
