--- a/_mockUp/bin/css/main.css
+++ b/_mockUp/bin/css/main.css
@@ -233,6 +233,9 @@ a:hover {
   color: inherit;
   text-decoration: none;
 }
+.removeLink:hover {
+  color: inherit;
+}
 /*
 * CSS Methodology based on InuitCSS, used for my owned workflow
 *
@@ -605,11 +608,11 @@ h6:first-child,
 * https://github.com/LSPanda | http://portfolio.simon-leyder.be
 */
 .footer__information {
-  width: 16.666666%;
+  width: 20%;
 }
 .footer__newsletter {
   float: right;
-  width: 20%;
+  width: 25%;
 }
 /*
 * CSS Methodology based on InuitCSS, used for my owned workflow
